--- a/client/package.json
+++ b/client/package.json
@@ -139,6 +139,7 @@
         "prop-types": "^15.6.1",
         "raven-js": "^3.25.2",
         "react": "^16.3.2",
+        "react-anchor-link-smooth-scroll": "^1.0.11",
         "react-color": "^2.14.1",
         "react-dom": "^16.3.2",
         "react-focus-trap": "^2.5.0",
