--- a/server/deploy/configs/uwsgi.ini
+++ b/server/deploy/configs/uwsgi.ini
@@ -13,6 +13,6 @@ plugins = /usr/lib/uwsgi/plugins/python3
 vacuum = true
 virtualenv = /venv/
 
-req-logger = file:/var/log/uwsgi/access.log
-logger = file:/var/log/uwsgi/error.log
-log-maxsize = 10240
+;req-logger = file:/var/log/uwsgi/access.log
+;logger = file:/var/log/uwsgi/error.log
+;log-maxsize = 10240
