--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,3 +5,5 @@ djangorestframework-camel-case==0.2.0
 drf-dynamic-fields==0.3.0
 pyjwt==1.6.4
 psycopg2-binary==2.7.5
+boto3==1.9.5
+django-storages==1.7.1
