--- a/.env-sample
+++ b/.env-sample
@@ -12,3 +12,4 @@ DJANGO_AWS_STORAGE_BUCKET_NAME_STATIC=
 DJANGO_AWS_STORAGE_BUCKET_NAME_MEDIA=
 S3_AWS_ACCESS_KEY_ID=
 S3_AWS_SECRET_ACCESS_KEY=
+S3_AWS_REGION_NAME=
