--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,10 @@
-django==2.1
+django>=2.1,<2.2
 django-cors-headers==2.4.0
 djangorestframework==3.8.2
 djangorestframework-camel-case==0.2.0
 drf-dynamic-fields==0.3.0
 pyjwt==1.6.4
+django-jet==1.0.8
 psycopg2-binary==2.7.5
 boto3==1.9.5
 django-storages==1.7.1
