--- a/client/.stylelintrc.json
+++ b/client/.stylelintrc.json
@@ -7,8 +7,6 @@
       "stylelint-config-concentric"
   ],
   "rules": {
-      "indentation": 4,
-
-      "selector-pseudo-class-no-unknown": ["global"]
+      "indentation": 4
   }
 }
