--- a/client/package.json
+++ b/client/package.json
@@ -105,6 +105,7 @@
         "webpack-pwa-manifest": "^3.6.2"
     },
     "dependencies": {
+        "@togglecorp/fujs": "^1.6.1",
         "@togglecorp/ravl": "^1.0.2",
         "body-parser": "^1.18.3",
         "d3-area-label": "^1.4.0",
