--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,43 +1,34 @@
-FROM ubuntu:16.04
+FROM python:3.7-alpine
 
 MAINTAINER togglecorp info@togglecorp.com
 
-# Clean apt
-RUN apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /var/lib/apt/lists/partial/* && \
-    rm -rf /var/cache/apt/*
-
-# Update and install common packages with apt
-RUN apt-get update -y ; \
-    apt-get install -y \
-        # Basic Packages
-        git \
-        locales \
-        vim \
-        curl \
-        cron \
-        unzip \
-        python3 \
-        python3-dev \
-        python3-setuptools \
-        python3-pip
-
-# Support utf-8
-RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-
-# Install uwsgi for django
-RUN pip3 install uwsgi
+ENV PYTHON3 /usr/local/bin/python3
+ENV PIP3 /usr/local/bin/pip3
 
 WORKDIR /code
 
-RUN pip3 install virtualenv
-RUN virtualenv /venv
-
 COPY ./requirements.txt /code/requirements.txt
-RUN . /venv/bin/activate && \
-    pip install -r requirements.txt
+
+RUN apk add --no-cache --virtual .app-deps \
+        git bash gcc libpq coreutils libxslt \
+    && apk add --no-cache --virtual .build-deps \
+        subversion python3-dev \
+        musl-dev \
+        linux-headers \
+        postgresql-dev \
+        ca-certificates \
+        libxml2-dev \
+        libxslt-dev \
+        zlib-dev \
+        jpeg-dev \
+    && apk add \
+        --no-cache \
+        --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing \
+        --repository http://dl-cdn.alpinelinux.org/alpine/edge/main \
+        gdal gdal-dev geos-dev \
+    && $PIP3 install --upgrade pip \
+    && $PIP3 install --no-cache-dir -r requirements.txt \
+    && apk del --no-cache .build-deps
 
 COPY . /code/
 
