--- a/server/deploy/configs/uwsgi.ini
+++ b/server/deploy/configs/uwsgi.ini
@@ -2,16 +2,14 @@
 
 chdir = /code/
 module = togglecorp.wsgi
-home =  /venv/lib/python
 
 master = true
 processes = 10
 http = 0.0.0.0:80
 chmod = 666
-plugins = /usr/lib/uwsgi/plugins/python3
+plugins = python3,http
 
 vacuum = true
-virtualenv = /venv/
 
 ;req-logger = file:/var/log/uwsgi/access.log
 ;logger = file:/var/log/uwsgi/error.log
