--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
-django>=2.1,<2.2
+django>=2.2,<2.3
 django-cors-headers==2.4.0
-djangorestframework==3.8.2
+djangorestframework==3.9.4
 djangorestframework-camel-case==0.2.0
 drf-dynamic-fields==0.3.0
 pyjwt==1.6.4
@@ -9,3 +9,4 @@ psycopg2-binary==2.7.5
 boto3==1.9.5
 django-storages==1.7.1
 ipython==6.5.0
+uwsgi
