--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.2'
 services:
   db:
     image: postgres:9.6
+    environment:
+      # IMPORTANT: Remove this on production
+      - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
