--- a/client/package.json
+++ b/client/package.json
@@ -87,7 +87,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^22.4.3",
         "mini-css-extract-plugin": "^0.4.0",
-        "node-sass": "4.12.0",
+        "node-sass": "^4.14.1",
         "optimize-css-assets-webpack-plugin": "^4.0.1",
         "react-test-renderer": "^16.3.2",
         "sass-loader": "^7.3.1",
@@ -105,7 +105,9 @@
         "webpack-pwa-manifest": "^3.6.2"
     },
     "dependencies": {
+        "@togglecorp/fujs": "^1.9.0",
         "@togglecorp/ravl": "^1.0.2",
+        "@togglecorp/react-rest-request": "^2.4.5",
         "body-parser": "^1.18.3",
         "d3-area-label": "^1.4.0",
         "d3-array": "^1.2.1",
@@ -146,6 +148,7 @@
         "react-focus-trap": "^2.5.0",
         "react-ga": "^2.5.0",
         "react-helmet": "^5.2.0",
+        "react-markdown": "^4.3.1",
         "react-redux": "^5.0.7",
         "react-resize-detector": "^2.3.0",
         "react-router-dom": "^4.2.2",
