--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,13 @@
-django>=2.2,<2.3
-django-cors-headers==2.4.0
-djangorestframework==3.9.4
-djangorestframework-camel-case==0.2.0
-drf-dynamic-fields==0.3.0
-pyjwt==1.6.4
-django-jet==1.0.8
-psycopg2-binary==2.7.5
 boto3==1.9.5
+django-cors-headers==2.4.0
+django-jet==1.0.8
 django-storages==1.7.1
+django>=2.2,<2.3
+djangorestframework-camel-case==0.2.0
+djangorestframework==3.9.4
+drf-dynamic-fields==0.3.0
 ipython==6.5.0
+psycopg2-binary==2.8.5
+pyjwt==1.6.4
 uwsgi
+zappa==0.51.0
