--- a/.travis.yml
+++ b/.travis.yml
@@ -26,26 +26,30 @@ script:
 
 after_success:
   - docker-compose push
-    # TODO: IF and migrate
-  - docker pull $ZAPPA_IMG || true
-  - docker build -t $ZAPPA_IMG --cache-from $ZAPPA_IMG -f ./server/zappa.dockerfile ./server/
   - |
-    docker run --rm \
-        -e AWS_ACCESS_KEY_ID=$ZAPPA_AWS_ACCESS_KEY_ID \
-        -e AWS_SECRET_ACCESS_KEY=$ZAPPA_AWS_SECRET_ACCESS_KEY \
-        -e AWS_DEFAULT_REGION=$ZAPPA_AWS_DEFAULT_REGION \
-      $ZAPPA_IMG \
-      bash -c 'source /venv/bin/activate && zappa update prod'
+    if [[ "$TRAVIS_BRANCH" = "release" ]] ; then
+      docker pull $ZAPPA_IMG || true
+      docker build -t $ZAPPA_IMG --cache-from $ZAPPA_IMG -f ./server/zappa.dockerfile ./server/
+      docker run --rm \
+          -e AWS_ACCESS_KEY_ID=$ZAPPA_AWS_ACCESS_KEY_ID \
+          -e AWS_SECRET_ACCESS_KEY=$ZAPPA_AWS_SECRET_ACCESS_KEY \
+          -e AWS_DEFAULT_REGION=$ZAPPA_AWS_DEFAULT_REGION \
+          -v `pwd`/server/=/code/ \
+        $ZAPPA_IMG \
+        bash -c 'source /venv/bin/activate && cd /code/ && zappa update prod && zappa manage prod migrate'
+      docker push $ZAPPA_IMG
+    fi
 
 deploy:
   provider: s3
-  access_key_id: $S3_AWS_ACCESS_KEY_ID
-  secret_access_key: $S3_AWS_SECRET_ACCESS_KEY
+  access_key_id: $ZAPPA_AWS_ACCESS_KEY_ID
+  secret_access_key: $ZAPPA_AWS_SECRET_ACCESS_KEY
   bucket: $TOGGLECORP_S3_BUCKET
   skip_cleanup: true
   local_dir: ./client/build
   acl: public_read
-  region: $DEPLOYMENT_REGION
+  region: $ZAPPA_AWS_DEFAULT_REGION
+  edge: true # opt in to dpl v2
   on:
     branch: release
 
