--- a/client/package.json
+++ b/client/package.json
@@ -87,9 +87,9 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^22.4.3",
         "mini-css-extract-plugin": "^0.4.0",
-        "node-sass": "^4.14.1",
         "optimize-css-assets-webpack-plugin": "^4.0.1",
         "react-test-renderer": "^16.3.2",
+        "sass": "^1.45.1",
         "sass-loader": "^7.3.1",
         "style-loader": "^0.23.1",
         "stylelint": "^10.1.0",
@@ -149,15 +149,10 @@
         "react-ga": "^2.5.0",
         "react-helmet": "^5.2.0",
         "react-markdown": "^4.3.1",
-        "react-redux": "^5.0.7",
         "react-resize-detector": "^2.3.0",
         "react-router-dom": "^4.2.2",
         "react-sortable-hoc": "^0.6.8",
         "react-svg": "^3.0.2",
-        "redux": "^4.0.0",
-        "redux-mock-store": "^1.5.1",
-        "redux-persist": "^5.9.1",
-        "redux-thunk": "^2.2.0",
         "reselect": "^3.0.1",
         "svgsaver": "^0.9.0"
     }
